# webspace_controller

./: README.md  main.py  pyproject.toml  run.sh
resources/web/templates/: index.html  linked_page.html
tests/: api.py  web.py
webspace/: paths.py
