[tool.poetry]
name = "webspace"
version = "0.1.0"
description = ""
authors = ["Santo K Thomas"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["standard"], version = "^0.115.3"}
streamlit = "^1.39.0"
pandas = "^2.2.3"
polars = "^1.10.0"
xlsxwriter = "^3.2.0"
openpyxl = "^3.1.5"
pydantic = "^2.9.2"
sqlalchemy = "^2.0.36"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
